[package]
name = "relapse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.25.0"
shuttle-runtime = "0.25.0"
dotenv = "0.15"
chrono = "0.4.30"
chrono-tz = "0.6.2"
serenity = { version = "0.11.5", default-features = false, features = ["cache","client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
shuttle-secrets = "0.25.0"
tokio = "1.26.0"
tracing = "0.1.37"
rand = "0.8.5"
