[package]
name = "relapse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"

dotenv = "0.15"
chrono = "0.4.30"
chrono-tz = "0.6.2"
serenity = { version = "0.11.7" }
shuttle-serenity = { version = "0.47.0", default-features = false, features = ["serenity-0-11-rustls_backend"] }
shuttle-secrets = "0.25.0"
tracing = "0.1.37"
rand = "0.8.5"
reqwest = "0.11.20"
serde = "1.0.188"
axum = "0.7.3"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.28.2"